[gd_scene load_steps=4 format=3 uid="uid://cptbis20m44bh"]

[ext_resource type="FontFile" uid="uid://dklnqdkk835j" path="res://Serve Smash Assets/Fonts/PressStart2P-Regular.ttf" id="1_6b3qf"]
[ext_resource type="Script" uid="uid://3h0c7li2fhe1" path="res://Options/options_menu.gd" id="1_tpjg5"]
[ext_resource type="PackedScene" uid="uid://ddsri4a1t1ss7" path="res://Options/volume_slider.tscn" id="3_s82a4"]

[node name="OptionsMenu" type="PanelContainer"]
offset_right = 960.0
offset_bottom = 540.0
script = ExtResource("1_tpjg5")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
tab_alignment = 1
current_tab = 0

[node name="Sound" type="TabBar" parent="TabContainer"]
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 0

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sound"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sound/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="MasterLabel" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6b3qf")
theme_override_font_sizes/font_size = 24
text = "Master Volume"
horizontal_alignment = 1

[node name="MasterVolumeSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer/MasterLabel" instance=ExtResource("3_s82a4")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = 32.0
offset_right = 176.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
scrollable = false

[node name="MusicLabel" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6b3qf")
theme_override_font_sizes/font_size = 24
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicVolumeSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer/MusicLabel" instance=ExtResource("3_s82a4")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = 32.0
offset_right = 176.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
scrollable = false

[node name="SFXLabel" type="Label" parent="TabContainer/Sound/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6b3qf")
theme_override_font_sizes/font_size = 24
text = "SFX Volume"
horizontal_alignment = 1

[node name="SFXVolumeSlider" parent="TabContainer/Sound/MarginContainer/VBoxContainer/SFXLabel" instance=ExtResource("3_s82a4")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = 32.0
offset_right = 176.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
scrollable = false

[node name="Controls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6b3qf")
theme_override_font_sizes/font_size = 24
text = "Master Volume"

[node name="Label2" type="Label" parent="TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6b3qf")
theme_override_font_sizes/font_size = 24
text = "Master Volume"

[node name="Label3" type="Label" parent="TabContainer/Controls/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_6b3qf")
theme_override_font_sizes/font_size = 24
text = "Master Volume"

[node name="Exit" type="Button" parent="."]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("1_6b3qf")
theme_override_font_sizes/font_size = 24
text = "Exit"
